@@ -1,1 +1,1 @@
-{"version":"5.7-dev","releasedate":"2018-01-15"}
+{"version":"5.7-dev","releasedate":"2018-01-17"}
