@@ -90,6 +90,7 @@ Ver.5.7-dev (in development)
 - [BUG FIX] The method to convert number from string (INTERMediatorLib.normalizeNumerics) returned wrong result.
 - [BUG FIX] IMLibLocalContext.bindingDescendant() didn't detect nodes that generated after page construct.
 - [BUG FIX] jQuery-File-Upload plug-in was improved in case of multiple rows presentation.
+- [BUG FIX] DefinitionChecker did not work fine in extended error range for new PHP version.
 
 Ver.5.6.1 (September 16, 2017)
 - Fix loading the page of the Practice "search (using JavaScript)".
